// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleTree should render prereq tree of module: CS3244 1`] = `
[
  <div
    class="container"
  >
    <ul
      class="prereqTree"
    >
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            CS5242
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            CS5339
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            CS6281
          </mockedlink>
        </div>
      </li>
    </ul>
    <div
      class="node conditional"
    >
      needs
    </div>
    <ul
      class="tree root"
    >
      <li
        class="branch"
      >
        <div
          class="node moduleNode hoverable color-1"
        >
          <mockedlink
            class="link"
          >
            CS3244
          </mockedlink>
        </div>
        <ul
          class="tree"
        >
          <li
            class="branch"
          >
            <div
              class="node conditional"
            >
              all of
            </div>
            <ul
              class="tree"
            >
              <li
                class="branch"
              >
                <div
                  class="node conditional"
                >
                  one of
                </div>
                <ul
                  class="tree"
                >
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        CS2010
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        CS2020
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        CS2040
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        CS2040C
                      </mockedlink>
                    </div>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <div
                  class="node conditional"
                >
                  one of
                </div>
                <ul
                  class="tree"
                >
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        ESP1107
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        ESP2107
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        ST1232
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        ST2131
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        ST2132
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        ST2334
                      </mockedlink>
                    </div>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <div
                  class="node conditional"
                >
                  one of
                </div>
                <ul
                  class="tree"
                >
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        MA1101R
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        MA1311
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        MA1506
                      </mockedlink>
                    </div>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <div
                  class="node conditional"
                >
                  one of
                </div>
                <ul
                  class="tree"
                >
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        MA1102R
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        MA1505
                      </mockedlink>
                    </div>
                  </li>
                  <li
                    class="branch"
                  >
                    <div
                      class="node moduleNode hoverable color-4"
                    >
                      <mockedlink
                        class="link"
                      >
                        MA1521
                      </mockedlink>
                    </div>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>,
  <p
    class="alert alert-warning"
  >
    This new version of the prerequisite tree is being tested and may not be accurate. Viewers are encouraged to double check details with the prerequisite text above. To report bugs with the new tree, please post a bug report on GitHub (preferred) at 
    <a
      href="https://github.com/nusmodifications/nusmods/issues/new/choose"
      rel="noopener noreferrer nofollow"
      target="_blank"
    >
      our repository
    </a>
     or send an email to 
    <a
      href="mailto:bugs@nusmods.com"
      rel="noopener noreferrer nofollow"
      target="_blank"
    >
      bugs@nusmods.com
    </a>
    .
  </p>,
]
`;

exports[`ModuleTree should render requirements fulfilled tree of module: ACC1002 1`] = `
[
  <div
    class="container"
  >
    <ul
      class="prereqTree"
    >
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            ACC1006
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            ACC2002
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            ACC3601
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            ACC3603
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            ACC3605
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            ACC3616
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            FIN2004
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            FIN2004X
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            FIN3113
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            FIN3130
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            IS5116
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            ACC3611
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            FIN3132
          </mockedlink>
        </div>
      </li>
      <li
        class="branch prereqBranch"
      >
        <div
          class="node moduleNode hoverable color-0 prereqNode"
        >
          <mockedlink
            class="link"
          >
            FIN4115
          </mockedlink>
        </div>
      </li>
    </ul>
    <div
      class="node conditional"
    >
      needs
    </div>
    <ul
      class="tree root"
    >
      <li
        class="branch"
      >
        <div
          class="node moduleNode hoverable color-1"
        >
          <mockedlink
            class="link"
          >
            ACC1002
          </mockedlink>
        </div>
      </li>
    </ul>
  </div>,
  <p
    class="alert alert-warning"
  >
    This new version of the prerequisite tree is being tested and may not be accurate. Viewers are encouraged to double check details with the prerequisite text above. To report bugs with the new tree, please post a bug report on GitHub (preferred) at 
    <a
      href="https://github.com/nusmodifications/nusmods/issues/new/choose"
      rel="noopener noreferrer nofollow"
      target="_blank"
    >
      our repository
    </a>
     or send an email to 
    <a
      href="mailto:bugs@nusmods.com"
      rel="noopener noreferrer nofollow"
      target="_blank"
    >
      bugs@nusmods.com
    </a>
    .
  </p>,
]
`;
